--- a/index.html
+++ b/index.html
@@ -16,11 +16,10 @@
 	<script src='https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-directions/v2.0.0/mapbox-gl-directions.js'></script>
 	<link rel='stylesheet' href='https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-directions/v2.0.0/mapbox-gl-directions.css' type='text/css' />
 
+
 	 <!-- load bootstrap and fontawesome via CDN -->
 	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" />
 	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.0/css/font-awesome.css" />
-	 
-
 
      <!-- load angular and angular route via CDN -->
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular.min.js"></script>
@@ -35,6 +34,8 @@
 		  <ul>
 		    <li><a href="#mapQuest">MapQuest</a></li>
 		    <li><a href="#mapBox">MapBox</a></li>
+		    <li><a href="#bingMaps">BingMaps</a></li>
+
 		  </ul>
 		</nav>
 
@@ -43,11 +44,31 @@
 			<div ng-view></div>
 		</div>
 
+		        <div id='printoutPanel'></div>
+        
+        <div id='myMap' style='width: 100vw; height: 100vh;'></div>
+        <script type='text/javascript'>
+            function loadMapScenario() {
+                var map = new Microsoft.Maps.Map(document.getElementById('myMap'), {
+                    credentials: 'Your Bing Maps Key',
+                    center: new Microsoft.Maps.Location(47.606209, -122.332071),
+                    zoom: 12
+                });
+                Microsoft.Maps.loadModule('Microsoft.Maps.Directions', function () {
+                    var directionsManager = new Microsoft.Maps.Directions.DirectionsManager(map);
+                    directionsManager.setRenderOptions({ itineraryContainer: document.getElementById('printoutPanel') });
+                    directionsManager.showInputPanel('printoutPanel');
+                });
+                
+            }
+        </script>
+        <script type='text/javascript' src='http://www.bing.com/api/maps/mapcontrol?callback=loadMapScenario' async defer></script>
+
 		<!-- import angular controller -->
 		<script src="app.js"></script>
 	    <script src="mapQuest/mapQuestController.js"></script>
 	    <script src="mapBox/mapBoxController.js"></script>
-
+	    <script src="bingMaps/bingMapsController.js"></script>
 
 	</body>
 </html>>
