--- a/MapBox/mapBox.html
+++ b/MapBox/mapBox.html
@@ -1,1 +1,1 @@
-<div id='map' style="height: 800px; width: 80%;"></div>
+<div id='map' style="width: 100%; height: 100%; position: relative;"></div>
