--- a/LeafletUiLeaflet/leafletUiLeaflet.html
+++ b/LeafletUiLeaflet/leafletUiLeaflet.html
@@ -1,2 +1,1 @@
-<!-- <leaflet center="san_fran" markers="markers" event-broadcast="events" defaults="defaults" id='map' style="width: 100%; height: 100%; position: relative;">
-</leaflet> -->
+<leaflet id="mymap" lf-center="center" height="100%" width="100%"></leaflet>
