--- a/index.html
+++ b/index.html
@@ -49,7 +49,11 @@
 		</div>
 
 		<!-- import libs -->
-		<script src="node_modules/angular-leaflet-directive/dist/angular-leaflet-directive.js"></script>
+		<!-- <script src="node_modules/angular-leaflet-directive/dist/angular-leaflet-directive.js"></script>
+		 -->
+
+		<script src="node_modules/angular-simple-logger/dist/angular-simple-logger.js"></script>
+		<script src="node_modules/ui-leaflet/dist/ui-leaflet.js"></script>
 		<script src="node_modules/leaflet-routing-machine/dist/leaflet-routing-machine.js"></script>
 
 
