Koordinaten für Karlsruhe, Marker und Kommentare hinzugefügt

--- a/index.html
+++ b/index.html
@@ -3,11 +3,7 @@
 		<!-- load own stylesheet -->
 	    <link rel="stylesheet" href="style/style.css" />
 
-		<!-- load own leaflet CDN -->
-		 <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.css" />
-		 <script src="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.js"></script>
-
-		<!-- load leaflet routin machine css -->
+		<!-- load leaflet leaflet routin machine css -->
 		 <link rel="stylesheet" href="node_modules/leaflet-routing-machine/dist/leaflet-routing-machine.css"/>
 
 		 <!-- load own mapBox via CDN -->
@@ -18,7 +14,7 @@
 
 		 <!-- load own mapQuest/leaflet via CDN -->
 	    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.5/leaflet.css" />
-	     <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.5/leaflet.js"></script>
+	    <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.5/leaflet.js"></script>
 	    <script src="https://www.mapquestapi.com/sdk/leaflet/v2.s/mq-map.js?key=hOXUtG9bAZapZOAgGFSiNyhGh5GGfe2K"></script>
 	    <script src="https://www.mapquestapi.com/sdk/leaflet/v2.s/mq-routing.js?key=hOXUtG9bAZapZOAgGFSiNyhGh5GGfe2K"></script>
 
@@ -49,13 +45,13 @@
 		</div>
 
 		<!-- import libs -->
-		<!-- <script src="node_modules/angular-leaflet-directive/dist/angular-leaflet-directive.js"></script>
-		 -->
+		<!-- decomment is for angular-leaflet-directive -->
+		<!-- <script src="node_modules/angular-leaflet-directive/dist/angular-leaflet-directive.js"></script> -->
 
+		<!-- first two you need for ui-leaflet. Third is for leaflet routing machine -->
 		<script src="node_modules/angular-simple-logger/dist/angular-simple-logger.js"></script>
 		<script src="node_modules/ui-leaflet/dist/ui-leaflet.js"></script>
 		<script src="node_modules/leaflet-routing-machine/dist/leaflet-routing-machine.js"></script>
-
 
 		<!-- import angular controller -->
 		<script src="app.js"></script>
