--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 		<!-- load leaflet leaflet routin machine css -->
 		 <link rel="stylesheet" href="node_modules/leaflet-routing-machine/dist/leaflet-routing-machine.css"/>
 
+		<!-- load leaflet geocoding css -->
+		 <link rel="stylesheet" href="lib/leaflet-control-geocoder-master/Control.Geocoder.css"/>
+
 		 <!-- load own mapBox via CDN -->
 		<script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.20.0/mapbox-gl.js'></script>
 	    <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.20.0/mapbox-gl.css' rel='stylesheet' />
@@ -48,10 +51,12 @@
 		<!-- decomment is for angular-leaflet-directive -->
 		<!-- <script src="node_modules/angular-leaflet-directive/dist/angular-leaflet-directive.js"></script> -->
 
-		<!-- first two you need for ui-leaflet. Third is for leaflet routing machine -->
+		<!-- first two you need for ui-leaflet. Third is for leaflet routing machine. Fourth for geocoding--> 
 		<script src="node_modules/angular-simple-logger/dist/angular-simple-logger.js"></script>
 		<script src="node_modules/ui-leaflet/dist/ui-leaflet.js"></script>
 		<script src="node_modules/leaflet-routing-machine/dist/leaflet-routing-machine.js"></script>
+		<script src="lib/leaflet-control-geocoder-master/Control.Geocoder.js"></script>
+
 
 		<!-- import angular controller -->
 		<script src="app.js"></script>
